Creacion Boton DarkMode

--- a/sudoku.html
+++ b/sudoku.html
@@ -8,7 +8,10 @@
     <script src="sudoku.js"></script>
 </head>
 <body>
+    <div id="inicio">
     <h1>Sudoku</h1>
+    <button id="darkmode">🌓</button>
+   </div>
     <hr/>
     <h2 id="errors">0</h2>
     
