Añadidos elementos corregir y rojo en css. Media query css. Html cambiado el lang de "en" a "es"

--- a/sudoku.html
+++ b/sudoku.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es ">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
@@ -19,5 +19,6 @@
     <div id="board"></div>
     <br/>
     <div id="digits"></div>
+    <button id="corregir"> CORREGIR </button>
 </body>
 </html>
