--- a/sudoku.html
+++ b/sudoku.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
-<html lang="es ">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku 9x9</title>
     <link rel="stylesheet" href="sudoku.css">
-    <script src="sudoku.js"></script>
 </head>
 <body>
-    <div id="inicio">
-    <h1>Sudoku</h1>
-    <button id="darkmode">🌓</button>
-   </div>
-    <hr/>
-    <h2 id="errors">0</h2>
-    
-    <!-- 9x9 board-->
-    <div id="board"></div>
-    <br/>
-    <div id="digits"></div>
-    <button id="corregir"> CORREGIR </button>
+    <div id="container">
+        <div id="left"></div>
+        <div id="center">
+            <div id="inicio">
+                <h1>Sudoku</h1>
+                <button class="buttonGenerales" id="darkmode">🌓</button>
+            </div>
+            <hr/>
+            <h2 id="errors">0</h2>
+            <div id="board"></div>
+            <br/>
+            <div id="digits"></div>
+            <button class="buttonGenerales" id="corregir"> CORREGIR </button>
+        </div>
+        <div id="right">
+            <div id="menu">
+                <button class="azul" id="botonAzul"></button>
+                <button class="amarillo" id="botonAmarillo"></button>
+                <button class="verde" id="botonVerde"></button>
+                <button class="blanco" id="botonBlanco"></button>
+                <button class="naranja" id="botonNaranja"></button>
+            </div>
+            <div>
+                <button id="eliminar">ELIMINAR</button>
+            </div>
+        </div>
+    </div>
+    <script src="sudoku.js"></script>
 </body>
 </html>
