Ajuste de tamaño. Botones con flex. Media query para pantallas pequeñas.

--- a/sudoku.html
+++ b/sudoku.html
@@ -12,16 +12,19 @@
         <div id="center">
             <div id="inicio">
                 <h1>Sudoku</h1>
-                <button class="buttonGenerales" id="darkmode">🌓</button>
             </div>
             <hr/>
             <h2 id="errors">0</h2>
             <div id="board"></div>
             <br/>
             <div id="digits"></div>
-            <button class="buttonGenerales" id="corregir"> CORREGIR </button>
+
         </div>
         <div id="right">
+            <div class="botonesGenerales">
+                <button class="buttonGenerales" id="darkmode">🌓</button>
+                <button class="buttonGenerales" id="corregir"> CORREGIR </button>
+            </div>
             <div id="menu">
                 <button class="azul" id="botonAzul"></button>
                 <button class="amarillo" id="botonAmarillo"></button>
