añadido white border darkmode

--- a/sudoku.html
+++ b/sudoku.html
@@ -21,7 +21,7 @@
 
         </div>
         <div id="right">
-            <div class="botonesGenerales">
+            <div>
                 <button class="buttonGenerales" id="darkmode">🌓</button>
                 <button class="buttonGenerales" id="corregir"> CORREGIR </button>
             </div>
