Eliminar propiedades css repes: Border radius, border,... Nuevo boton para poner varios numeros por casilla. Falta JS

--- a/sudoku.html
+++ b/sudoku.html
@@ -32,6 +32,9 @@
                 <button class="blanco" id="botonBlanco"></button>
                 <button class="naranja" id="botonNaranja"></button>
             </div>
+            <div class="dosNumeros">
+                <button id="botonDosNumeros">1,2,3</button>
+            </div>
             <div>
                 <button id="eliminar">ELIMINAR</button>
             </div>
